Another attempt at multigrid and a bunch of messy preprocessor directives to disable parts of the SolverData.h class depending on which solver mode you want to test.

--- a/HydrologySolver/HydrologySolver.vcxproj
+++ b/HydrologySolver/HydrologySolver.vcxproj
@@ -141,10 +141,12 @@
   <ItemGroup>
     <ClInclude Include="CSRMatrix.h" />
     <ClInclude Include="DataPointer.h" />
+    <ClInclude Include="Globals.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="MatrixOps.h" />
     <ClInclude Include="MultigridMesh.h" />
     <ClInclude Include="MultigridOps.h" />
+    <ClInclude Include="OperationModes.h" />
     <ClInclude Include="SolverDataOld.h" />
     <ClInclude Include="SolverData.h" />
   </ItemGroup>
