--- a/RedBook/RedBook.vcxproj
+++ b/RedBook/RedBook.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="DataImage.h" />
     <ClInclude Include="DataImageSize.h" />
     <ClInclude Include="DataRasterManager.h" />
+    <ClInclude Include="Depthmap.h" />
     <ClInclude Include="external\imgui\backends\imgui_impl_glfw.h" />
     <ClInclude Include="external\imgui\backends\imgui_impl_opengl3.h" />
     <ClInclude Include="external\imgui\backends\imgui_impl_opengl3_loader.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="TerrainTemplate.h" />
     <ClInclude Include="TerrainType.h" />
     <ClInclude Include="ThreadPool.h" />
+    <ClInclude Include="TileSizes.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="UniqueRequestStack.h" />
     <ClInclude Include="VoronoiAlgorithms.h" />
@@ -191,6 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ContinentGenAlgorithms.cpp" />
+    <ClCompile Include="Depthmap.cpp" />
     <ClCompile Include="external\glad\src\glad.c" />
     <ClCompile Include="external\imgui\backends\imgui_impl_glfw.cpp" />
     <ClCompile Include="external\imgui\backends\imgui_impl_opengl3.cpp" />
