--- a/HydrologyApp/HydrologyApp.vcxproj
+++ b/HydrologyApp/HydrologyApp.vcxproj
@@ -136,6 +136,9 @@
       <Project>{4ff21861-785f-4a93-936f-031ec6df0910}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Timer.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
